# threlium

./: pyproject.toml
ansible/: README.md  ansible.cfg
ansible/group_vars/: all.yml.example  e2e.yml
ansible/playbooks/: site.yml
ansible/playbooks/tasks/: cli_sandbox_acceptance.yml
ansible/roles/threlium/defaults/: main.yml
ansible/roles/threlium/files/scripts/: pyproject.toml  verify_knowledge_snippets.py
ansible/roles/threlium/files/scripts/threlium/: cli_fsm.py  cli_hitl_tool_bridge.py  context_budget.py  context_token_count.py  egress_self_archive.py  enrich_context.py  enrich_tool_bridge.py  enrich_user_query.py  formal_reason_engine.py  formal_reason_gate.py  fsm_emit.py  fsm_emit_semantic.py  graph_answer_view.py  ingress_bridge_user_query.py  ingress_distill.py  ingress_distill_tool_bridge.py  ingress_hitl_resolve.py  ingress_route_resolve.py  irt_chain.py  irt_subagent_classifier.py  knowledge_fsm.py  ledger_context_parts.py  litellm_correlation_headers.py  litellm_required_tool.py  litellm_tool_bridge.py  litellm_tool_spec.py  logutil.py  mail_header_names.py  mime_reform.py  nm.py  prompts.py  settings.py  summarize_pack.py  summarize_tool_bridge.py
ansible/roles/threlium/files/scripts/threlium/bridges/: __init__.py  checkpoint.py  dedup.py  email.py  ingress_from.py  matrix.py  matrix_client.py  notmuch_space_anchor.py  routing.py  telegram.py  telegram_bot.py
ansible/roles/threlium/files/scripts/threlium/bridges/isomorph/: history.py  pending.py  run_bridge.py  server.py  snowflake_mid.py
ansible/roles/threlium/files/scripts/threlium/response/: collect.py  ops.py
ansible/roles/threlium/files/scripts/threlium/runners/engine/: fsm.py
ansible/roles/threlium/files/scripts/threlium/runners/lightrag/: __init__.py  _adapters.py  _bootstrap.py  _construction.py  _drain.py  _lifecycle.py  aquery.py  cozo_impl.py  lancedb_impl.py  lightrag_tool_bridge.py  lightrag_tool_serialize.py
ansible/roles/threlium/files/scripts/threlium/states/: cli_exec.py  cli_hitl_out.py  cli_intent.py  cli_resume.py  egress_email.py  egress_isomorph.py  egress_matrix.py  egress_telegram.py  enrich.py  enrich_fast.py  enrich_task_llm.py  formal_reason.py  global_memory.py  ingress.py  logic_validate.py  memory_query.py  rdf_graphs.py  reasoning.py  reflect.py  registry.py  response_edit.py  response_finalize.py  response_observe.py  subagent_end.py  subagent_intent.py  summarize_context.py  summarize_memory.py  tasks_upsert.py  thread_memory.py
ansible/roles/threlium/files/scripts/threlium/task/: __init__.py  collect.py  gate.py  ops.py  reduce.py  state_summary.py
ansible/roles/threlium/files/scripts/threlium/types/: __init__.py  _core.py  cli_hitl_tool_args.py  cli_hitl_tool_function.py  cli_mail.py  content_score.py  enrich.py  enrich_tool_args.py  enrich_tool_function.py  fsm_stage.py  fsm_strings.py  hop_cap.py  identity.py  ingress_distill.py  ingress_distill_tool_args.py  ingress_distill_tool_function.py  ingress_hitl.py  knowledge_stage.py  lightrag_query.py  lightrag_tool_args.py  lightrag_tool_function.py  lightrag_tool_phase.py  lightrag_tool_wire.py  litellm_call_site.py  litellm_correlation_snapshot.py  litellm_routing_site.py  matrix_client_room_message.py  notmuch_tag.py  prompt_path.py  reasoning.py  reasoning_tool_args.py  summarize_tool_args.py  summarize_tool_function.py  task_ledger.py
ansible/roles/threlium/vars/: main.yml
docs/: ARCHITECTURE.md  ARTICLE.md  BRIDGE_ISOMORPH.md  CONTEXT_CONTRACT.md  E2E.md  E2E_ISOLATION.md  E2E_PARALLEL_ISOLATION_REPORT.md  FSM.md  IDENTITY_AND_CHECKPOINTS.md  INDEX.md  MEMORY_TABLE.md  MESSAGES.md  RESPONSE_TABLE.md  SUBAGENT_TABLE.md  TESTING.md  TYPES.md
docs/briefing/: dedup_audit_followups_briefing.md  doc_types_ingress_cleanup_briefing.md  e2e_toolkit_refactor_briefing.md  enrich_task_hypotheses_briefing.md  simplified_enrich_dead_code_cleanup_briefing.md  summarize_context_overflow_e2e_briefing.md  system_cid_lightrag_per_history_briefing.md  user_query_semantic_turn_briefing.md
docs/extraction/: system_cid_lightrag_per_history_briefing.md
docs/skills/: implementation-plan-formation.md  mailflow-e2e-wiremock-sut.md
scripts/: debug_egress_irt_probe.py  replay_reasoning_vllm.py
tests/e2e/: conftest.py  formal_reason_assertions.py  helpers.py  log.py  smtp_inject.py  sut_user_systemd.py  test_cli_discovery_chain_e2e.py  test_cozo_graph_adapter_e2e.py  test_formal_reason_chain_e2e.py  test_formal_reason_gate_recovery_matrix_e2e.py  test_formal_reason_inference_e2e.py  test_formal_reason_query_e2e.py  test_formal_reason_technical_gate_e2e.py  test_formal_reason_violation_e2e.py  test_fsm_handler_failure_e2e.py  test_imap_checkpoint_resume_e2e.py  test_isomorph_bridge_anthropic_cline_e2e.py  test_isomorph_bridge_anthropic_json_e2e.py  test_isomorph_bridge_e2e.py  test_isomorph_bridge_openai_cline_e2e.py  test_isomorph_bridge_openai_json_e2e.py  test_isomorph_bridge_sse_wire_e2e.py  test_isomorph_bridge_timeout_e2e.py  test_knowledge_bootstrap_live_e2e.py  test_lightrag_index_filter_e2e.py  test_logic_validate_chain_e2e.py  test_mailflow_e2e.py  test_mailflow_live_only_e2e.py  test_matrix_wiremock_live_e2e.py  test_memory_query_e2e.py  test_orphan_skip_e2e.py  test_reasoning_litellm_context_trim_e2e.py  test_reasoning_litellm_mock_live.py  test_response_buffer_e2e.py  test_response_table_e2e.py  test_subagent_frame_isolation_e2e.py  test_summarize_context_e2e.py  test_task_ledger_all_cancelled_e2e.py  test_task_ledger_chain_e2e.py  test_task_ledger_e2e.py  (+6 more)
tests/e2e/fixtures/: e2e_bootstrap_probe.md
tests/e2e/toolkit/: __init__.py  ansible.py  cleanup.py  cline_system_prompt.tmpl  compose_lifecycle.py  constants.py  diag.py  greenmail.py  imap_checkpoint.py  isomorph_cline.py  knowledge.py  lightrag_assert.py  mailflow.py  notmuch_assert.py  pipeline.py  runtime.py  wiremock_assert.py  workers.py
tests/e2e/wiremock_stubs/compose_bootstrap/: 001_e2e_state_phase_reset.json  002_e2e_state_list_size.json  003_e2e_state_property.json  004_e2e_state_call_sites.json  005_e2e_state_reply_targets.json  (+9 more)
(+963 files in other folders)
