[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "threlium-infra"
version = "0"
requires-python = ">=3.11"
readme = "README.md"
description = "Ansible и скрипты Threlium (метаданные для инструментов)"
dependencies = [
    "lightrag-hku[api]==1.4.16",
    "numpy>=2.4.4,<3.0.0",
    "msgspec>=0.21.1",
    "pydantic>=2.13.4,<3",
    "pydantic-settings[yaml]>=2.14.1,<3",
    "litellm>=1.83.0,<1.83.8",
    "numpy>=2.4.4,<3.0.0",
    "pybase62>=1.0.0",
    "python-telegram-bot>=22.7,<23",
    "jinja2>=3.1.6",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.1.0",
    "notmuch2>=0.34.3",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
e2e = [
    "ansible-core>=2.20.5",
    "docker>=7.1.0",
    "filelock>=3.29.0",
    "jinja2>=3.1.6",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "tenacity>=9.1.4",
    "testcontainers>=4.14.2",
    "requests>=2.34.2",
    "wiremock>=2.7.0",
]

[tool.setuptools.packages.find]
# Метаданные — на уровне репозитория (dev-инструменты); рантайм-пакет
# `threlium` установлен из `ansible/roles/threlium/files/scripts/pyproject.toml`.
where = ["ansible/roles/threlium/files/scripts"]
include = ["threlium*"]

[tool.mypy]
python_version = "3.11"
files = ["ansible/roles/threlium/files/scripts"]
check_untyped_defs = true
warn_return_any = false
show_error_codes = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
extend-select = ["PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tests/e2e/helpers.py" = ["PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests/e2e", "tests/unit"]
pythonpath = [".", "ansible/roles/threlium/files/scripts"]
# testpaths: e2e (полный контур) + unit в `tests/unit` (быстрые проверки границ).
# Полный bake и site.yml на живом sut — явные модули tests/e2e/wipe_bake.py и wipe_sync.py
# (имена вне test_*.py, не входят в дефолтную коллекцию). Не задавать python_files = *.py.
# Маркер `e2e` навешивается collection hook'ом на все `tests/e2e/test_*.py`.
markers = [
    "e2e: Docker/Testcontainers harness (Linux + Docker)",
]
